; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/brin/extr_brin_tuple.c_brin_copy_tuple.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/brin/extr_brin_tuple.c_brin_copy_tuple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @brin_copy_tuple(i32* %0, i64 %1, i32* %2, i64* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64*, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  store i64* %3, i64** %8, align 8
  %9 = load i64*, i64** %8, align 8
  %10 = icmp ne i64* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %4
  %12 = load i64*, i64** %8, align 8
  %13 = load i64, i64* %12, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %11, %4
  %16 = load i64, i64* %6, align 8
  %17 = call i32* @palloc(i64 %16)
  store i32* %17, i32** %7, align 8
  br label %30

18:                                               ; preds = %11
  %19 = load i64, i64* %6, align 8
  %20 = load i64*, i64** %8, align 8
  %21 = load i64, i64* %20, align 8
  %22 = icmp sgt i64 %19, %21
  br i1 %22, label %23, label %29

23:                                               ; preds = %18
  %24 = load i32*, i32** %7, align 8
  %25 = load i64, i64* %6, align 8
  %26 = call i32* @repalloc(i32* %24, i64 %25)
  store i32* %26, i32** %7, align 8
  %27 = load i64, i64* %6, align 8
  %28 = load i64*, i64** %8, align 8
  store i64 %27, i64* %28, align 8
  br label %29

29:                                               ; preds = %23, %18
  br label %30

30:                                               ; preds = %29, %15
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %5, align 8
  %33 = load i64, i64* %6, align 8
  %34 = call i32 @memcpy(i32* %31, i32* %32, i64 %33)
  %35 = load i32*, i32** %7, align 8
  ret i32* %35
}

declare dso_local i32* @palloc(i64) #1

declare dso_local i32* @repalloc(i32*, i64) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
